src/tui/snapshots/imgfind__tui__render_tests__editing_mode.snap
---
source: src/tui/render_tests.rs
expression: text
---
"╭─────────────────────────────────imgfind-cli──────────────────────────────────╮"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│ ┌Search query──────────────────────────────────────────────────────────────┐ │"
"│ │sunset                                                                    │ │"
"│ └──────────────────────────────────────────────────────────────────────────┘ │"
"│                                                                              │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
