src/tui/snapshots/imgfind__tui__render_tests__empty_results.snap
---
source: src/tui/render_tests.rs
expression: out
---
"╭─────────────────────────────────imgfind-cli──────────────────────────────────╮"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                    Page 1/1 (0 results) [H prev | L next]                    │"
"│ ┌Search query──────────────────────────────────────────────────────────────┐ │"
"│ │                                                                          │ │"
"│ └──────────────────────────────────────────────────────────────────────────┘ │"
"│                                                                              │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
