src/tui/snapshots/imgfind__tui__render_tests__idle_frame.snap
---
source: src/tui/render_tests.rs
expression: out
---
"╭─────────────────────────────────imgfind-cli──────────────────────────────────╮"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│ ┌Search query──────────────────────────────────────────────────────────────┐ │"
"│ │                                                                          │ │"
"│ └──────────────────────────────────────────────────────────────────────────┘ │"
"│                                                                              │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
