src/tui/snapshots/imgfind__tui__render_tests__results_grid_pixels.snap
---
source: src/tui/render_tests.rs
expression: out
---
"╭─────────────────────────────────imgfind-cli──────────────────────────────────╮"
"│                                                                              │"
"│ ╭───────────────────────╮                                                    │"
"│ │                       │                                                    │"
"│ │       ▀▀▀▀▀▀          │                                                    │"
"│ │                       │                                                    │"
"│ ╰───────────────────0.123                                                    │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                    Page 1/1 (1 results) [H prev | L next]                    │"
"│ ┌Search query──────────────────────────────────────────────────────────────┐ │"
"│ │                                                                          │ │"
"│ └──────────────────────────────────────────────────────────────────────────┘ │"
"│                                                                              │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
