src/tui/snapshots/imgfind__tui__render_tests__zoomed_image.snap
---
source: src/tui/render_tests.rs
expression: out
---
"╭─────────────────────────────────imgfind-cli──────────────────────────────────╮"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                       ▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁                           │"
"│                       ▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔                           │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                       scroll to zoom | right-click to                        │"
"│                                                                        0.999 │"
"│                                                                              │"
"│ ┌Search query──────────────────────────────────────────────────────────────┐ │"
"│ │                                                                          │ │"
"│ └──────────────────────────────────────────────────────────────────────────┘ │"
"│                                                                              │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
